package model.abstracted;

public interface Lookable {}
